# android-camera-timing-pc

./: .gitignore  AndroidTimingPC.pro  CMakeLists.txt  README.md  images.qrc  imagethread.cpp  imagethread.h  main.cpp  mainwindow.cpp  mainwindow.h  mytcpsocket.cpp  mytcpsocket.h  ocrpipeline.cpp  ocrpipeline.h  summitemulator.cpp  summitemulator.h  timingcamera.cpp  timingcamera.h  timingpoint.cpp  timingpoint.h  timingpointcamera.cpp  timingpointcamera.h  timingpointinfo.cpp  timingpointinfo.h
